DisplayErrorUserControl Optimized on XLC

--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/DisplayErrorMessageUserControl.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/DisplayErrorMessageUserControl.xaml
@@ -8,20 +8,28 @@
     <Grid >
         <Rectangle Fill="DarkGray" Opacity=".7" MouseDown="Rectangle_MouseDown" />
         <Border CornerRadius ="8" Background="White" Height="100" Width="345" BorderBrush="Green" BorderThickness="1.5" >
-            <Grid>
+            <!--<Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="70" />
                     <RowDefinition Height="Auto" />
-                    <!--<RowDefinition Height="*" />-->
+                    --><!--<RowDefinition Height="*" />--><!--
                 </Grid.RowDefinitions>
 
-                <!--<Label Grid.Row="0" Background="Silver" Content="Error Message"  FontSize="20" FontWeight="Bold" Padding=" 5 0 0 3" Width="350" HorizontalContentAlignment="Left" Foreground="Red"  />-->
+                --><!--<Label Grid.Row="0" Background="Silver" Content="Error Message"  FontSize="20" FontWeight="Bold" Padding=" 5 0 0 3" Width="350" HorizontalContentAlignment="Left" Foreground="Red"  />--><!--
 
                 <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#FF251F1F"  TextWrapping="Wrap" />
 
                 <Button Grid.Row="1" HorizontalAlignment="Center" Name="Close_Modal" Background="White" Foreground="Black" BorderBrush="Green" Height="20" Width="51" FontSize="10" Padding=" 0 3"
                         Click="Button_Close_Modal" Margin="0,0,0,14">Ok</Button>
-            </Grid>
+            </Grid>-->
+
+            <StackPanel>
+                <Border Height="70">
+                    <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#FF251F1F"  TextWrapping="Wrap" />
+                </Border>
+                <Button Grid.Row="1" HorizontalAlignment="Center" Name="Close_Modal" Background="White" Foreground="Black" BorderBrush="Green" Height="20" Width="51" FontSize="10" Padding=" 0 3"
+                        Click="Button_Close_Modal" Margin="0,0,0,14">Ok</Button>
+            </StackPanel>
         </Border>
 
     </Grid>
