--- a/src/XelsPCHDesktopWalletApp/Views/CreateConfirmMnemonic.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/CreateConfirmMnemonic.xaml
@@ -53,7 +53,7 @@
                         <TextBox Grid.Row="1" Name="word1" Padding="5" Margin="0 5" AutomationProperties.HelpText="Enter a wallet name." />
                     </Grid>-->
                     <StackPanel>
-                        <Label Name="wordone" Margin="5 0" Content="{Binding ElementName=Valueone, Path=wordone}"/>
+                        <TextBlock Height="8" Name="wordone" Margin="5 0" Text="{Binding ElementName=Valueone, Path=wordone}"/>
                         <TextBox Name="word1" Padding="5" Margin="0 5" AutomationProperties.HelpText="Enter a wallet name." />
                     </StackPanel>
                 </Border>
@@ -69,7 +69,7 @@
                         <TextBox Grid.Row="1" Name="word2" Margin="0 5" Padding="5" />
                     </Grid>-->
                     <StackPanel>
-                        <Label Name="wordtwo" Margin="5 0" Content="{Binding ElementName=Valuetwo, Path=wordtwo}"  />
+                        <TextBlock Height="8" Name="wordtwo" Margin="5 0" Text="{Binding ElementName=Valuetwo, Path=wordtwo}"  />
                         <TextBox Name="word2" Margin="0 5" Padding="5" />
                     </StackPanel>
                 </Border>
@@ -85,7 +85,7 @@
                         <TextBox Grid.Row="1" Name="word3" Margin="0 5" Padding="5"  />
                     </Grid>-->
                     <StackPanel>
-                        <Label Name="wordthree" Margin="5 0"  Content="{Binding ElementName=Valuethree, Path=wordthree}"/>
+                        <TextBlock Height="8" Name="wordthree" Margin="5 0"  Text="{Binding ElementName=Valuethree, Path=wordthree}"/>
                         <TextBox Name="word3" Margin="0 5" Padding="5"/>
                     </StackPanel>
                 </Border>
