Cross Chain Transfer validation visibility fixed on XLC and PCH

--- a/src/XelsPCHDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
@@ -116,7 +116,7 @@
                                             <Grid>
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="*" />
-                                                    <RowDefinition Height="8" />
+                                                    <RowDefinition Height="Auto" />
                                                 </Grid.RowDefinitions>
 
                                                 <!--Amount-->
