--- a/src/XelsXLCDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsXLCDesktopWalletApp.Views"
         mc:Ignorable="d"
-         Height="600" Width="1100">
-
+        Height="600" Width="1100"
+        ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen">
+    
     <Border Margin="10,10,10,10" BorderBrush="Green" BorderThickness="3" CornerRadius="10">
         <!--Border Padding="10"-->
         <StackPanel>
@@ -49,7 +51,7 @@
                        HorizontalAlignment="Center" 
                        Width="35"
                        Height="21" />
-                
+
                 <TextBlock
                            Background="White" Margin="0 10 10 0"   Width="46"
                  RenderTransformOrigin="0.51,0.144" Height="27">
@@ -68,7 +70,7 @@
 
 
             <TextBlock Margin="0,10,0,0" Foreground="#DD000000" Text="Welcome" FontWeight="ExtraBold"  FontSize="24" Padding="5 15 " HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light"/>
-            
+
             <TextBlock Width="462" FontSize="14" HorizontalAlignment="Center" Opacity="0.7" TextWrapping="Wrap">
                 If you would like to create a new wallet, please click <Bold>Create</Bold>.If you have used the wallet before, please select <Bold>Restore</Bold> to recover your old wallet.</TextBlock>
 
