--- a/src/XelsPCHDesktopWalletApp/Views/Dialogs/ResourceDictionaryForDialogs.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Dialogs/ResourceDictionaryForDialogs.xaml
@@ -22,7 +22,7 @@
                     <Border Height="70">
                         <TextBlock Text="{Binding Message}" Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Center" FontSize="15" TextWrapping="Wrap" />
                     </Border>
-                    <Button Content="OK" HorizontalAlignment="center" Background="green" Foreground="white" Height="25" Width="60" FontSize="10"  Margin="0,10,0,0"
+                    <Button Content="OK" HorizontalAlignment="Center" Background="green" Foreground="white" Height="25" Width="60" FontSize="10"  Margin="0,10,0,0"
                         Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
                 </StackPanel>
             </Border>
@@ -30,7 +30,7 @@
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type model:ErrorDialogMessage}">
-        <StackPanel Margin="20">
+        <!--<StackPanel Margin="20">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -53,7 +53,19 @@
             </Grid>
             <Button Content="OK"
                             Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"></Button>
-        </StackPanel>
+        </StackPanel>-->
+
+        <Border MinHeight="120" MinWidth="350" >
+            <Border Background="White" Margin="3 3 3 3" BorderBrush="Green" CornerRadius="8" BorderThickness="1.5">
+                <StackPanel>
+                    <Border Height="70">
+                        <TextBlock Text="{Binding Message}" Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Center" FontSize="15" TextWrapping="Wrap" />
+                    </Border>
+                    <Button Content="OK" HorizontalAlignment="Center" Background="White" Foreground="Black" BorderBrush="Green" Height="25" Width="60" FontSize="10"  Margin="0,10,0,0"
+                        Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                </StackPanel>
+            </Border>
+        </Border>
     </DataTemplate>
     
 </ResourceDictionary>
